# Takumi

./: .env.example  .gitignore  CLAUDE.md  README.md  Takumi_PRD.md  docker-compose.yml  package.json  pnpm-lock.yaml
.playwright-mcp/: network-transactions.md
apps/api/: package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/ai/: chat-handler.ts  conversation.service.ts  system-prompt.ts
apps/api/src/data/: sector-map.json  tase-ticker-map.json
apps/api/src/lib/: config.ts  db.ts
apps/api/src/middleware/: error-handler.ts  require-auth.ts
apps/api/src/routes/: analytics.ts  auth.ts  chat.ts  exchange-rates.ts  market.ts  positions.ts  snapshots.ts  stock.ts  sync.ts  trades.ts
apps/api/src/scripts/: verify-alt-investment.ts
apps/api/src/services/: alt-investment.service.ts  analytics.service.ts  email.service.ts  exchange-rate.service.ts  market.service.ts  pnl.service.ts  position.service.ts  risk.service.ts  scheduler.service.ts  snapshot.service.ts  stock-detail.service.ts  stooq.service.ts  sync.service.ts  (+4 more)
apps/web/: next.config.mjs  package.json
apps/web/src/: middleware.ts
docs/: REQUIREMENTS.md  ai-agent.md
scripts/: bootstrap-users.ts  dev.sh  fix-renamed-tickers.ts  fix-tase-prices.ts  fix-tase-shekel-trades.ts  seed.ts
services/ibi-sync/: Dockerfile  pyproject.toml
services/ibi-sync/src/: server.py
services/ibi-sync/src/api/: client.py  endpoints.py
services/ibi-sync/src/auth/: jwt_manager.py  pkce.py
services/ibi-sync/src/models/: __init__.py
services/ibi-sync/src/sync/: holdings.py  transactions.py
(+48 files in other folders)
